--- a/开发手册.md
+++ b/开发手册.md
@@ -1,6 +1,6 @@
 欢迎使用DL：Android动态加载框架，本文将引导你使用DL构建自己的插件化Android应用程序。
 
-在开始前，请先到项目git页面下载完整的项目：<a href="https://github.com/slovx2/dynamic-load-apk">https://github.com/slovx2/dynamic-load-apk</a>
+在开始前，请先到项目git页面下载完整的项目：<a href="https://github.com/singwhatiwanna/dynamic-load-apk">https://github.com/singwhatiwanna/dynamic-load-apk</a>
 
 本文所有的范例代码都可以在sample里找到，主要在main这个sample中，位置：/sample/main
 
@@ -31,18 +31,10 @@
 
 #二、构建插件程序</h1>
 构建DL插件程序也可以在已有项目上进行。
-
 1. 添加依赖dl-lib.jar
-
-在插件程序中添加依赖必须注意：如果这些依赖在宿中已存在，则必须使用sourcepath的方式引用，这些依赖不会被打包到最终APK，若不使用sourcepath方式
-，则会引起宿主与插件的类重复，运行失败。
-
+在插件程序中添加依赖必须注意：如果这些依赖在宿中已存在，则必须使用sourcepath的方式引用，这些依赖不会被打包到最终APK，若不使用sourcepath方式，则会引起宿主与插件的类重复，运行失败。
 在eclipse中使用sourcepath的引用的方法：
-
-(1)新建目录用于存放jar包，如sample中的extranal-jar
-
-(2)右键jar包，Build Path-&gt;Add to build path
-
-(3)右键项目，如下图设置，去掉勾选。
- 
+(1) 新建目录用于存放jar包，如sample中的extranal-jar
+(2) 右键jar包，Build Path-&gt;Add to build path
+(3) 右键项目，如下图设置，去掉勾选。
 由于dl-lib.jar在宿主中已存在，所以我们使用sourcepath方式引用
